--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -40,3 +40,39 @@ table.table {
 .read-only-user-detail { 
     pointer-events: none;
 }
+
+.user-row {
+    display: flex;
+    gap: 1rem;
+}
+
+.form-floating {
+    width: 100%;
+}
+
+.title {
+    padding: 0rem 1rem;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.transaction {
+    margin-bottom: unset !important;
+}
+
+.transaction-body {
+    margin-bottom: 1rem;
+}
+
+.transaction-body-container {
+    padding: 1rem;
+}
