--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -18,12 +18,10 @@ button {
 
 .btn-info {
     background: #0dcaf0 !important;
-    margin: 0 auto;
     width: 3rem;
 }
 
 .btn-danger {
-    margin: 0 auto;
     width: 3rem;
 }
 
@@ -35,6 +33,7 @@ table.table {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
 }
 
 .read-only-user-detail { 
