--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -132,3 +132,13 @@ p {
 .modal-title {
     justify-content: unset;
 }
+
+div#contained-modal-title-vcenter {
+    justify-content: space-between;
+    display: flex;
+    width: 100%;
+}
+
+.modal-close-btn {
+    font-size: 1rem;
+}
