--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -142,3 +142,18 @@ div#contained-modal-title-vcenter {
 .modal-close-btn {
     font-size: 1rem;
 }
+
+table.table {
+    overflow-x: auto;
+    display: block;
+}
+@media (min-width: 768px) {
+    table.table {
+        overflow-x: auto;
+        display: inline-table;
+    }
+}
+
+.add-user-btn {
+    width: 9rem;
+}
