--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -150,6 +150,11 @@ table.table {
 @media (min-width: 768px) {
     table.table {
         overflow-x: auto;
+        display: block;
+    }
+}
+@media (min-width: 1024px) {
+    table.table {
         display: inline-table;
     }
 }
