add responsive cards to homepage

--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -9,29 +9,25 @@ div#root {
         flex-direction: unset;
     }
     .side-bar.d-flex.flex-column.flex-shrink-0.p-3.bg-light {
-        margin: 5rem 0 0 250px;
+        margin: 10vh 0 0 10vh;
         background-color: unset !important;    
     }
     .routes-container {
         width: 100%;
-        padding: 5rem 250px 5rem 0
+        margin: 10vh 10vh 0 0;
     }
 }
 
 @media (min-width: 769px) and (max-width: 1240px) {
     .side-bar.d-flex.flex-column.flex-shrink-0.p-3.bg-light {
-        margin: 5rem 0 0         
-    }
-    .routes-container {        
-        padding: 5rem 0;        
+        margin: 5rem 0 5rem         
     }
     
 }
 
 .side-bar {
     width: 15rem;
-    height: 80vh;
-
+    height: 80vh;      
 }
 
 
