--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -2,8 +2,13 @@
     display: grid;
     grid-template-columns: repeat(6, minmax(100px, 1fr));
     grid-template-rows: repeat(4, minmax(150px, 1fr));
-    max-height: 80vh;
-    gap: 1em;    
+    height: 80vh;
+    gap: 1em;
+    overflow-y: scroll;  
+}
+
+.card-container::-webkit-scrollbar { /* WebKit */   
+    display: none;
 }
 
 .svg {
@@ -80,8 +85,7 @@
         grid-template-columns: repeat(4, minmax(75px, 1fr));
         grid-template-rows: repeat(10, minmax(150px, 1fr));
         max-height: 80vh;
-        gap: 1em;
-        width: inherit
+        gap: 1em;        
     }
 
     .item1 {
