--- a/src/components/Dashboard/Transfers/style.css
+++ b/src/components/Dashboard/Transfers/style.css
@@ -1,10 +1,29 @@
 .dashboard-container {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    padding: 0 1rem 1rem;
     width: 100%;
+    overflow-y: scroll;
+    height: 80vh;
+}
+
+.dashboard-container::-webkit-scrollbar { /* WebKit */   
+    display: none;
 }
 
 h3 {
     margin: 0;
+}
+
+.transaction-header {
+    position: sticky;
+    top: 0;
+    background-color: #f7f7ff;
+    text-align: center;    
+}
+
+.table-header {
+    position: sticky;
+    top: 0;
+    background: #ffff
 }
