--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -199,3 +199,21 @@ a {
 .navbar-light .navbar-nav .nav-link {
     color: #000 !important;
 }
+
+.input-group-addon {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    cursor: pointer;
+    padding: .5rem .75rem;
+    margin-bottom: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.25;
+    color: #495057;
+    text-align: center;
+    background-color: #e9ecef;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+    width: 3rem;
+}   
