--- a/src/components/Dashboard/Transfers/style.css
+++ b/src/components/Dashboard/Transfers/style.css
@@ -7,7 +7,14 @@
     height: 80vh;
 }
 
-.dashboard-container::-webkit-scrollbar { /* WebKit */   
+@media (min-width: 920px) {
+    .dashboard-container {
+        height: 70vh !important;
+    }
+}
+
+.dashboard-container::-webkit-scrollbar { 
+    /* WebKit */   
     display: none;
 }
 
