--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -1,8 +1,9 @@
 .users-container {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    /* padding: 1rem; */
     width: 100%;
+    height: 80vh;
 }
 
 button {
@@ -189,4 +190,19 @@ table.table {
 
 .no-user-available {
     
+}
+
+.table-container {   
+    overflow-y: scroll;    
+    padding: 0
+}
+
+.table-container::-webkit-scrollbar { /* WebKit */   
+    display: none;
+}
+
+.table-header {
+    position: sticky;
+    top: 0;
+    background: #ffff
 }
