--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -45,9 +45,9 @@ button {
     width: 100%;
 }
 
-.title {
+/* .title {
     padding: 0rem 1rem;
-}
+} */
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
