--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -27,3 +27,17 @@ body{
     width: 100%;
     margin-top: 0.5rem;
 }
+
+@media (min-width: 768px) {
+    .user-info-details {
+        overflow-y: auto;
+        height: 45vh;
+    }
+}
+
+@media (min-width: 1024px) {
+    .user-info-details {
+        overflow-y: unset;
+        height: unset;
+    }
+}
