--- a/src/components/Dashboard/Deposits/style.css
+++ b/src/components/Dashboard/Deposits/style.css
@@ -26,7 +26,8 @@ h3 {
     position: sticky;
     top: 0;
     background-color: #f7f7ff;
-    text-align: center;    
+    text-align: center;
+    padding-bottom: 1rem;  
 }
 
 .table-header {
