--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -222,3 +222,18 @@ a {
 .mobile-links {
     width: 100%
 }
+
+.log-in-account-title {
+    padding: unset !important;
+}
+
+.login-modal-title-container {
+    padding: 0rem !important;
+}
+
+@media (min-width: 480px){
+    .modal-dialog {
+        max-width: 300px;
+        margin: 1.75rem auto;
+    }
+}
