--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -127,6 +127,7 @@ div#exampleModalLive {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 !important;
 }
 
 .account-row {
