--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -233,3 +233,10 @@ table.table {
     top: 0;
     background: #f7f7ff
 }
+
+
+@media (min-width: 480px) {
+    .modal-details-component {
+        max-width: 435px !important;
+    }
+}
