--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -33,7 +33,7 @@ button {
     gap: 1rem;
 }
 
-.read-only-user-detail { 
+.read-only-user-detail {
     pointer-events: none;
 }
 
@@ -53,12 +53,13 @@ button {
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
+
 /* Firefox */
 input[type=number] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 .transaction {
@@ -84,7 +85,7 @@ p {
     height: calc(3.5rem + 2px);
 }
 
-.submit-btn { 
+.submit-btn {
     color: #fff;
     background-color: #0d6efd;
     border-color: #0d6efd;
@@ -112,7 +113,7 @@ p {
 }
 
 .success-message {
-   color: green;
+    color: green;
 }
 
 .enter-an-amount-message {
@@ -142,7 +143,7 @@ div#contained-modal-title-vcenter {
 
 table.table {
     overflow-x: auto;
-    display: block;    
+    display: block;
 }
 
 @media (min-width: 768px) {
@@ -150,33 +151,24 @@ table.table {
         overflow-x: unset;
         display: block;
     }
-
-    .add-client-btns {
-        display: flex;
-        margin-bottom: 0.5rem;
-        justify-content: unset;
-        gap: 1rem;
-    }
-
-    .btns-n-search {
-        display: flex;
-        justify-content: space-between;
-    }
 }
+
 @media (min-width: 1024px) {
     table.table {
-        display: inline-table;
+        display: inline-table;        
     }
 }
 
-.add-user-btn {
-    width: 9rem;
+.user-btn {    
+    width: 100%;
 }
 
 .add-client-btns {
     display: flex;
     margin-bottom: 0.5rem;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 1rem;
+
 }
 
 .btns-n-search {
@@ -187,12 +179,39 @@ table.table {
     margin-right: 0rem !important;
 }
 
-.table-container {   
-    overflow-y: scroll;    
+@media (min-width: 768px) {
+    .add-client-btns {
+        display: flex;
+        margin-bottom: 0.5rem;
+        gap: 1rem;
+        flex-direction: unset;
+    }
+
+    .user-btn {
+        width: 9rem;
+    }
+
+    .btns-n-search {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 1240px) {
+        .btns-n-search {
+            flex-direction: row;
+        }
+    
+}
+
+.table-container {
+    overflow-y: scroll;
     padding: 0
 }
 
-.table-container::-webkit-scrollbar { /* WebKit */   
+.table-container::-webkit-scrollbar {
+    /* WebKit */
     display: none;
 }
 
