--- a/src/components/Budget/style.css
+++ b/src/components/Budget/style.css
@@ -85,8 +85,8 @@ p {
 
 .submit-btn { 
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: #7E57C2;
+    border-color: #7E57C2;
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
@@ -102,8 +102,9 @@ p {
 }
 
 .submit-btn:hover {
-    background-color: #0b5ed7;
-    border-color: #0a58ca;
+    color: #fff;
+    background-color: #7E57C2;
+    border-color: #7E57C2;
 }
 
 .error-message {
@@ -185,10 +186,6 @@ table.table {
         display: flex;
         justify-content: space-between;
     }
-}
-
-.no-user-available {
-    
 }
 
 .add-expense-btn {
