--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -18,8 +18,18 @@ button {
 }
 
 .btn-info {
-    background: #0dcaf0 !important;
+    background: #7E57C2 !important;
+    border-color: unset;
+    color: #ffff !important;
     width: 3rem;
+}
+
+.btn-info:hover {        
+    border-color: #7245B7 !important;
+}
+
+.white path {
+    stroke: #fff;    
 }
 
 .btn-danger {
@@ -85,10 +95,10 @@ p {
     height: calc(3.5rem + 2px);
 }
 
-.submit-btn {
+.submit-btn { 
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: #7E57C2;
+    border-color: #7E57C2;
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
@@ -104,8 +114,9 @@ p {
 }
 
 .submit-btn:hover {
-    background-color: #0b5ed7;
-    border-color: #0a58ca;
+    color: #000;
+    background-color: #fff;
+    border-color: #7E57C2;
 }
 
 .error-message {
@@ -232,6 +243,39 @@ table.table {
 
 }
 
+.btn-primary{
+    background-color: #7245B7;
+    border-color: #7245B7;
+}
+
+.btn-primary:hover {
+    color: #000;
+    background-color: #fff;
+    border-color: #7245B7;
+}
+
+.btn-secondary:hover {
+    color: #000;
+    background-color: #fff;
+    border-color: #7245B7;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    background-color: #7245B7;
+}
+
+.accordion-button:not(.collapsed) {
+    color: #000 !important;
+    background-color: #f7f7ff;
+    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+    border: 1px solid #7E57C2;
+    border-radius: 5px;    
+}
+
+.accordion-button::after {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='purple'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
 
 .table-container {
     overflow-y: scroll;
@@ -260,3 +304,4 @@ table.table {
     /* WebKit */   
     display: none;
 } 
+
