--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,11 @@
   letter-spacing: 0.02em
 }
 
-tbody, td, tfoot, th, thead, tr {
+tbody, td, th, tfoot, thead, tr {
   border-color: inherit;
   border-style: solid;
   border-width: 0;  
-  padding: 1rem 1rem !important;
+  padding: 1.25rem 0 !important;
 }
 
 div#root {
