--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -1,7 +1,7 @@
 .users-container {
     display: flex;
     flex-direction: column;
-    /* padding: 1rem; */
+    padding: 1rem 0 0 0;
     width: 100%;
     height: 80vh;
 }
