--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -15,6 +15,16 @@
     text-align: left;
 }
 
+.card {
+    width: 100%;
+    height: 100%;
+}
+
+.card-span {
+    display: flex;
+    justify-content: space-between;    
+}
+
 .svg {
     background-color: #f7f7ff !important;
 }
